fixed left nav overflow in C# docs

--- a/css/documentation.css
+++ b/css/documentation.css
@@ -125,7 +125,7 @@
   width: 1.6884765625em;
 }
 .svgicon-bot-connector {
-  width: 0.9951171875em;
+  width: 1.0048828125em;
 }
 .svgicon-bot-builder {
   width: 0.705078125em;
@@ -224,15 +224,14 @@ a .icon-font {
 input[type="submit"],
 input[type="button"],
 button {
-  height: 30px;
   min-width: 90px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 10px 32px 10px 32px;
   border: 0;
   background-color: #E6E6E6;
   font-size: 15px;
   color: #2B2B2B;
   border-radius: 0;
+  cursor: pointer;
 }
 input[type="submit"]:hover,
 input[type="button"]:hover,
@@ -255,6 +254,10 @@ input[type="button"]:disabled,
 button:disabled {
   color: white;
   background-color: #D6D6D6;
+}
+button.small {
+  font-size: 14px;
+  padding: 8px 16px 8px 16px;
 }
 button.danger {
   background-color: #E81022;
@@ -560,6 +563,9 @@ ul.header-nav li a:visisted {
   cursor: pointer;
   display: inline-block;
 }
+.searchBox button {
+  line-height: normal;
+}
 .searchBox input {
   padding: 3px 50px 3px 10px;
   font-size: 15px;
@@ -761,6 +767,25 @@ ul.header-nav li a:visisted {
 .message-box {
   width: 350px;
 }
+.dialog-close-button {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  cursor: pointer;
+}
+.dialog-close-button:after {
+  font-family: Glyphs;
+  font-size: 11px;
+  content: '\E106';
+  color: #2B2B2B;
+  display: inline-block;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
 .error-message-panel {
   background-color: #f2dede;
   color: #E81022;
@@ -875,6 +900,7 @@ dl {
   float: left;
   padding: 15px 20px;
   background-color: #B3DBF2;
+  height: 100% !important;
 }
 #side-nav ul {
   list-style-type: none;
@@ -1544,4 +1570,19 @@ a {
   margin: 0px;
   padding: 0px;
   font: 15px "Segoe UI", sans-serif;
+}
+#global-message {
+  border: none;
+  padding: 10px;
+  margin-bottom: 10px;
+  background-color: #BCDDEA;
+}
+#close:before {
+  font-family: Glyphs;
+  font-size: 16px;
+  width: 16px;
+  height: 16px;
+  position: relative;
+  content: '\E10A';
+  float: right;
 }
